--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         <link rel="stylesheet" type ="text/css" href="css/style.css">
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-expand-lg navbar-light margin">
             <a class="navbar-brand" href="#"><img src="img/global.png" width ="220" height="80">
             </a>
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem Somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem Somos?</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Parceiros</a>
@@ -24,6 +24,14 @@
                 </ul>
             <div>
         </nav>
+
+        <section id="Quem Somos?">
+            <div class="container-fluid quemsomos text-center margin">
+                <h3 class="margin">Quem Somos?</h3>
+                <img src="img/time.jpg" class="rounded-circle" width="400" height="400">
+                <h3>Somos um time comprometido com os resultados.</h3>
+            </div>
+        </section>
        
     </body>
     
